Effect of -XX:CICompilerCount depends on ordering of other flags

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 9
    • Affects Version/s: 9
    • Component/s: hotspot
    • None
    • b133

      While trying to profile some issue I noticed there is this ordering necessary on the cmd line options otherwise the JVM exits.

       14:12:07 $ /opt/jdk-9-b125/bin/java -XX:TieredStopAtLevel=1 -XX:CICompilerCount=1 -version
      java version "9-ea"
      Java(TM) SE Runtime Environment (build 9-ea+125)
      Java HotSpot(TM) 64-Bit Server VM (build 9-ea+125, mixed mode)

       14:12:17 $ /opt/jdk-9-b125/bin/java -XX:CICompilerCount=1 -XX:TieredStopAtLevel=1 -versionCICompilerCount (1) must be at least 2
      Improperly specified VM option 'CICompilerCount=1'
      Error: Could not create the Java Virtual Machine.
      Error: A fatal exception has occurred. Program will exit.

            Assignee:
            Tobias Hartmann
            Reporter:
            Eric Caspole
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: