8162881: Effect of -XX:CICompilerCount depends on ordering of other flags

Value of CICompilerCount should be range checked after ergo. Don't create C2 compiler threads with TieredStopAtLevel=1.

Reviewed-by: kvn